# recipe-chatbot

./: .gitignore  Makefile  pyproject.toml
backend/: __init__.py  main.py  utils.py
data/: sample_queries.csv
homeworks/hw2/: PART1.md  error_analysis_spreadsheet.csv  generate_synthetic_queries.py  results_20250527_220149.csv
homeworks/hw3/: HW3.md
homeworks/hw3/results/: final_evaluation.json
homeworks/hw3/scripts/: develop_judge.py  evaluate_judge.py  generate_traces.py  label_data.py  run_full_evaluation.py  simple_judge.py  split_data.py
scripts/: bulk_test.py
